Updated lefthook config, disabled bundle-leak

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,8 +1,9 @@
 pre-push:
   parallel: true
   commands:
-    bundler-leak:
-      run: bundle exec bundler-leak
+  # Disabled bundle-leak until next sprint or fix this issue through release new updates for gem
+    # bundler-leak:
+      # run: bundle exec bundler-leak
     bundler-audit:
       run: bundle exec bundler-audit check --update
     traceroute:
