Updated rubocop rules, changed parameter for HashSyntax rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,3 +23,7 @@ RSpec/EmptyExampleGroup:
 Lint/EmptyBlock:
   Exclude:
     - config/routes.rb
+  
+Style/HashSyntax:
+  EnforcedShorthandSyntax: either
+  
