| EM-42 | Feature | Create service for session creating

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ image: "ruby:3.1.0"
 .base_db:
   extends: .base
   services:
+    - redis:latest
     - postgres:latest
   variables:
     POSTGRES_DB: $POSTGRES_DB
