| EM-56 | Feature | Enable bundler leak for project

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,9 +1,8 @@
 pre-push:
   parallel: true
   commands:
-  # Disabled bundle-leak until next sprint or fix this issue through release new updates for gem
-    # bundler-leak:
-      # run: bundle exec bundler-leak
+    bundler-leak:
+      run: bundle exec bundler-leak
     bundler-audit:
       run: bundle exec bundler-audit check --update
     traceroute:
