| EM-100 | Bug | Fix password confirmation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,7 +16,7 @@ Layout/LineLength:
   Max: 120
 
 Metrics/BlockLength:
-  IgnoredMethods: ['describe', 'path', 'xdescribe']
+  IgnoredMethods: ['describe', 'path', 'xdescribe', 'post']
 
 RSpec/EmptyExampleGroup:
   Exclude:
