--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,13 +10,12 @@ AllCops:
 
 Style/Documentation:
   Enabled: false
-  EnforcedShorthandSyntax: either
 
 Layout/LineLength:
   Max: 120
 
 Metrics/BlockLength:
-  IgnoredMethods: ['describe', 'path', 'xdescribe', 'post']
+  IgnoredMethods: ['describe', 'path', 'xdescribe', 'post', 'context', 'it', 'let']
 
 RSpec/EmptyExampleGroup:
   Exclude:
@@ -28,3 +27,16 @@ Style/HashSyntax:
 RSpec/VariableName:
   Exclude:
     - spec/requests/api/v1/*
+
+RSpec:
+  Language:
+    ExampleGroups:
+      Regular:
+        - response
+        - run_test
+
+RSpec/MultipleMemoizedHelpers:
+    Max: 10
+
+RSpec/MultipleExpectations:
+    Max: 2
