--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,8 @@ Layout/LineLength:
   Max: 120
 
 Metrics/BlockLength:
+  Exclude:
+    - config/environments/*
   IgnoredMethods: ['describe', 'path', 'xdescribe', 'post', 'context', 'it', 'let', 'patch', 'delete', 'get']
 
 RSpec/EmptyExampleGroup:
