| EM-26 | Feature | Create page content logic in admin panel |

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,10 +14,18 @@ Style/Documentation:
 Layout/LineLength:
   Max: 120
 
+Metrics/AbcSize:
+  Exclude:
+    - db/migrate/*
+
 Metrics/BlockLength:
   IgnoredMethods: ['describe', 'path', 'xdescribe', 'post', 'context', 'it', 'let', 'patch', 'delete', 'get', 'response']
   Exclude:
     - config/environments/*
+
+Metrics/MethodLength:
+  Exclude:
+    - db/migrate/*
 
 RSpec/EmptyExampleGroup:
   Exclude:
