--- a/config/credentials_example.yaml
+++ b/config/credentials_example.yaml
@@ -5,6 +5,8 @@ database_password: null
 aws:
   access_key_id: null
   secret_access_key: null
+  bucket: null
+  region: null
 rswag:
   username: null
   password: null
