Fixed option depends_on for image of a sidekiq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,5 +72,5 @@ services:
       start_period: 10s
       retries: 3
     depends_on:
-      server:
+      redis:
         condition: service_healthy
